--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="not_registered_yet_sign_up">Not registered yet? Sign Up</string>
+    <string name="enter_your_name">Enter your Name</string>
 </resources>
